--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -2,39 +2,82 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="60dp"
     android:padding="10dip"
-    android:weightSum="100">
+
+    >
+
 
     <TextView
         android:gravity="center"
         android:textAlignment="center"
         android:text="TextView1"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_width="150dp"
+        android:layout_height="match_parent"
         android:id="@+id/textView1"
-        android:layout_weight="66.6"/>
+        />
+
+    <!--<ImageView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="60dp"-->
+    <!--android:id="@+id/imageView1"-->
+    <!--/>-->
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:adjustViewBounds="true"/>
+    <!--android:src="@drawable/san"-->
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="33.3">
+        >
 
         <TextView
             android:gravity="center"
             android:text="TextView2"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
             android:id="@+id/textView2"/>
 
         <TextView
             android:gravity="center"
-            android:text="TextView3"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:text="99"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:id="@+id/score1"
+
+            />
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+
+        <TextView
+            android:gravity="center"
+            android:text="99"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
             android:id="@+id/textView3"
-            android:layout_below="@+id/textView2"/>
+            />
+
+        <TextView
+            android:gravity="center"
+            android:text="99"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:id="@+id/score2"
+            />
     </LinearLayout>
 
 </LinearLayout>
