--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:padding="10dip"
-
+    android:background="@drawable/outline"
     >
 
 
@@ -12,16 +12,11 @@
         android:gravity="center"
         android:textAlignment="center"
         android:text="TextView1"
-        android:layout_width="150dp"
+        android:layout_width="130dp"
         android:layout_height="match_parent"
         android:id="@+id/textView1"
         />
 
-    <!--<ImageView-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="60dp"-->
-    <!--android:id="@+id/imageView1"-->
-    <!--/>-->
 
     <ImageView
         android:id="@+id/imageView1"
@@ -57,14 +52,22 @@
 
 
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:adjustViewBounds="true"/>
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         >
 
         <TextView
-            android:gravity="center"
             android:text="99"
             android:layout_width="30dp"
             android:layout_height="match_parent"
@@ -72,11 +75,11 @@
             />
 
         <TextView
-            android:gravity="center"
             android:text="99"
             android:layout_width="30dp"
             android:layout_height="match_parent"
             android:id="@+id/score2"
+
             />
     </LinearLayout>
 
