--- a/app/src/main/res/layout/yelp_item.xml
+++ b/app/src/main/res/layout/yelp_item.xml
@@ -18,68 +18,51 @@ card_view:cardCornerRadius="2dp">
         android:layout_height="wrap_content"
         android:padding="0dip">
 
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:adjustViewBounds="true"
+            android:src="@color/colorAccent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"
+            card_view:layout_constraintTop_toBottomOf="parent"/>
+
         <TextView
             android:id="@+id/title"
             android:layout_width="0dip"
-            android:layout_height="wrap_content"
+            android:layout_height="21dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:textSize="20sp"
             android:textStyle="bold"
             card_view:layout_constraintBottom_toBottomOf="@+id/img"
             card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="0.0"
             card_view:layout_constraintStart_toEndOf="@+id/img"
             card_view:layout_constraintTop_toTopOf="@+id/img"
             card_view:layout_constraintVertical_bias="0.0"
-            tools:text="testing" />
-
-        <ImageView
-            android:id="@+id/img"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:adjustViewBounds="true"
-            android:src="@color/colorAccent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent" />
+            card_view:layout_constraintHorizontal_bias="0.0"
+            tools:text="Yelp Location Name" />
 
         <TextView
             android:id="@+id/address"
-            android:layout_width="233dp"
-            android:layout_height="wrap_content"
+            android:layout_width="190dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
             android:textSize="14sp"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="1.0"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/img"
-            card_view:layout_constraintVertical_bias="0.0"
-            tools:layout_editor_absoluteX="116dp"
-            tools:layout_editor_absoluteY="54dp"
-            tools:text="@string/lorem_ipsum" />
+            card_view:layout_constraintStart_toEndOf="@+id/img"
+            card_view:layout_constraintTop_toBottomOf="@+id/title"
+            tools:text="1234 Street \n welp" />
 
         <TextView
             android:id="@+id/phone"
-            android:layout_width="233dp"
+            android:layout_width="125dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:textSize="14sp"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintHorizontal_bias="1.0"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/img"
-            card_view:layout_constraintVertical_bias="0.0"
-            tools:layout_editor_absoluteX="116dp"
-            tools:layout_editor_absoluteY="88dp"
-            tools:text="@string/lorem_ipsum" />
+            card_view:layout_constraintStart_toEndOf="@+id/address"
+            card_view:layout_constraintTop_toBottomOf="@+id/title"
+            card_view:layout_constraintVertical_bias="1.0"
+            tools:text="(123) 445 - 1234" />
 
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
