--- a/app/src/main/res/layout/game_item.xml
+++ b/app/src/main/res/layout/game_item.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:padding="10dip"
-    android:background="@drawable/outline"
-
+    android:background="@drawable/outline">
 
     <TextView
         android:gravity="center"
@@ -13,8 +12,7 @@
         android:text="TextView1"
         android:layout_width="130dp"
         android:layout_height="match_parent"
-        android:id="@+id/textView1"
-        />
+        android:id="@+id/textView1" />
 
 
     <ImageView
