--- a/app/src/main/res/layout/fantasy_player.xml
+++ b/app/src/main/res/layout/fantasy_player.xml
@@ -7,49 +7,50 @@
     android:orientation="vertical"
     android:padding="10dip">
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/fname"
-        android:text="fname"/>
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/lname"
-        android:text="lname"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/colorPrimary"
-        android:layout_marginLeft="16dp">
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:gravity="center"
+                android:id="@+id/fname"
+                android:text="fname"/>
 
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@+id/passing"
-            android:text="P_stats"/>
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:id="@+id/passing"
+                android:textSize="20sp"
+                android:text="P_stats"/>
 
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@+id/rushing"
-            android:text="RU_stats"/>
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:id="@+id/rushing"
+                android:textSize="20sp"
+                android:text="RU_stats"/>
 
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@+id/receiving"
-            android:text="RE_stats"/>
-    </LinearLayout>
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:id="@+id/receiving"
+                android:textSize="20sp"
+                android:text="RE_stats"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/fantasy_points"
-        android:text="current_pts"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/fantasy_points"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:text="current_pts"/>
 </LinearLayout>
+
 
 
 
