--- a/app/src/main/res/layout/player_list.xml
+++ b/app/src/main/res/layout/player_list.xml
@@ -14,19 +14,25 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textStyle="bold"
+            android:textSize="20sp"
             android:id="@+id/name"
             android:text="NAME"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textSize="20sp"
             android:id="@+id/position"
-
             android:text="POS"/>
 
         <TextView
             android:id="@+id/team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textSize="20sp"
             android:text="TEAM" />
     </LinearLayout>
 </LinearLayout>
